--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "gatsby-plugin-google-analytics": "2.0.17",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.23",
+    "gatsby-plugin-offline": "2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.6",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-plugin-sharp": "2.1.3",
+    "gatsby-source-filesystem": "2.0.38",
     "gatsby-transformer-sharp": "^2.1.13",
     "mdi-react": "5.2.0",
     "polished": "2.3.3",
